# image-in-terminal

./: .gitignore  LICENSE  README.md  build (-no-isolation).bat  build -n, install, del build dir.bat  build -n, install.bat  build, install, del build dir.bat  build, install.bat  build.bat  install (Run as Admin).bat  install.bat  install.cmd  install.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  uninstall (Run as Admin).cmd  uninstall.cmd
imageonterminal/: __init__.py  __main__.py
imageonterminal/src/: iot.py
src/iit/: __init__.py  __main__.py
src/imageinterminal/: __init__.py  constants.py  custom_rich_help_formatter.py  iit.py  main.py  utils.py
src/imageinterminal/src/: iit.py  iot.py
src/imageonterminal/: __init__.py  __main__.py
src/imageonterminal/src/: iot.py
tests/: conftest.py  iit.py
