[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-in-terminal"

version = "1.2.6"
description = "Simple Python package to display a single or multiple images in the terminal by converting it into text"
readme = "README.md"
authors = [
    { name = "Odell"},
    { email = "odellgm11012001@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: OS Independent"
]
keywords = ['terminal',
    'image',
    'imageonterminal',
    'image-on-terminal',
    'image on terminal',
    'imageinterminal',
    'image in terminal',
    'imageonconsole',
    'image-on-console',
    'image on console',
    'imageinconsole',
    'image-in-console',
    'image in console',
    'imagetotext',
    'image-to-text',
    'image to text']
dependencies = [
    'argparse>=1.4.0',
    'requests>=2.31.0',
    'rich>=13.5.3',
    'pathlib>=1.0.1',
    'pillow>=10.0.1',
    'rich-argparse'
]
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/odell0111/image-in-terminal"

[project.scripts]
imageinterminal = "imageinterminal:main"
iit = "imageinterminal:main"